--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My Resume</title>
+    <title>GerlieCorocoto_Resume</title>
 </head>
 <body>
     <h1>GERLIE P. COROCOTO</h1>
@@ -65,4 +65,5 @@
         <small>© Gerlie Corocoto. All right reserved.</small>
     </footer>
 </body>
+
 </html>
